<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.features.profile.ProfileFragment">

        <RelativeLayout
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/lMargin"
                android:text="@string/register_persian"
                android:textSize="@dimen/xxlTextSize" />
        </RelativeLayout>
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/xlPadding"
            android:text="@string/descriptionFormPersian"
            app:layout_constraintEnd_toEndOf="@+id/actionBar"
            app:layout_constraintStart_toStartOf="@+id/actionBar"
            app:layout_constraintTop_toBottomOf="@+id/actionBar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/mMargin"
                    android:text="@string/persianName"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edtTextName"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/edtTextName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/xlMargin"
                    android:layout_marginTop="@dimen/xxlMargin"
                    android:layout_marginEnd="@dimen/lMargin"
                    android:inputType="textPersonName"
                    android:textDirection="rtl"
                    android:textSize="@dimen/xxlTextSize"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/nameIcon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="@dimen/xlMargin"
                    android:layout_marginBottom="@dimen/xlMargin"
                    android:background="@drawable/blank_tick_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/edtTextName"
                    app:layout_constraintEnd_toStartOf="@+id/edtTextName"
                    app:layout_constraintTop_toTopOf="@+id/edtTextName" />

                <ImageView
                    android:id="@+id/familyNameIcon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="@dimen/xlMargin"
                    android:layout_marginBottom="@dimen/xlMargin"
                    android:background="@drawable/blank_tick_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/edtTextFamilyName"
                    app:layout_constraintEnd_toStartOf="@+id/edtTextFamilyName"
                    app:layout_constraintTop_toTopOf="@+id/edtTextFamilyName" />

                <ImageView
                    android:id="@+id/phoneNumberIcon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="@dimen/xlMargin"
                    android:layout_marginBottom="@dimen/xlMargin"
                    android:background="@drawable/blank_tick_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/edtTextPhoneNumber"
                    app:layout_constraintEnd_toStartOf="@+id/edtTextPhoneNumber"
                    app:layout_constraintTop_toTopOf="@+id/edtTextPhoneNumber" />

                <ImageView
                    android:id="@+id/homeNumberIcon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="@dimen/xlMargin"
                    android:layout_marginBottom="@dimen/xlMargin"
                    android:background="@drawable/blank_tick_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/edtTextHomeNumber"
                    app:layout_constraintEnd_toStartOf="@+id/edtTextHomeNumber"
                    app:layout_constraintTop_toTopOf="@+id/edtTextHomeNumber" />

                <EditText
                    android:id="@+id/edtTextFamilyName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textDirection="rtl"
                    android:textSize="@dimen/xxlTextSize"
                    app:layout_constraintEnd_toEndOf="@+id/edtTextName"
                    app:layout_constraintStart_toStartOf="@+id/edtTextName"
                    app:layout_constraintTop_toBottomOf="@+id/edtTextName" />

                <EditText
                    android:id="@+id/edtTextPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:textDirection="rtl"
                    android:textSize="@dimen/xxlTextSize"
                    app:layout_constraintEnd_toEndOf="@+id/edtTextFamilyName"
                    app:layout_constraintStart_toStartOf="@+id/edtTextFamilyName"
                    app:layout_constraintTop_toBottomOf="@+id/edtTextFamilyName" />

                <EditText
                    android:id="@+id/edtTextHomeNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/xlMargin"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:textDirection="rtl"
                    android:text="0548789898"
                    android:textSize="@dimen/xxlTextSize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/edtTextPhoneNumber"
                    app:layout_constraintStart_toStartOf="@+id/edtTextPhoneNumber"
                    app:layout_constraintTop_toBottomOf="@+id/edtTextPhoneNumber" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/mMargin"
                    android:text="@string/persianLastName"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edtTextFamilyName"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/mMargin"
                    android:text="@string/persianPhoneNum"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edtTextPhoneNumber"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/mMargin"
                    android:text="@string/persianHomeNum"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edtTextHomeNumber"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="77dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxlMargin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/addressIcon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="@dimen/xlMargin"
                    android:layout_marginBottom="@dimen/xlMargin"
                    android:background="@drawable/blank_tick_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/edtTextFullAddress"
                    app:layout_constraintEnd_toStartOf="@+id/edtTextFullAddress"
                    app:layout_constraintTop_toTopOf="@+id/edtTextFullAddress" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xxlMargin"
                    android:layout_marginEnd="@dimen/xlMargin"
                    android:text="@string/addressPersian"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edtTextFullAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/xlMargin"
                    android:layout_marginTop="@dimen/xlMargin"
                    android:inputType="text"
                    android:textSize="@dimen/xxlTextSize"
                    android:textDirection="rtl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xxlMargin"
                    android:layout_marginBottom="@dimen/xlMargin"
                    android:text="@string/genderPersian"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/edtTextFullAddress"
                    app:layout_constraintTop_toBottomOf="@+id/edtTextFullAddress" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/xlMargin"
                    android:checkedButton="@+id/radioButtonMale"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@+id/textView9"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView9">

                    <RadioButton
                        android:id="@+id/radioButtonFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radioFemale"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
                        app:layout_constraintStart_toStartOf="parent" />

                    <RadioButton
                        android:id="@+id/radioButtonMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radioMale"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
                        app:layout_constraintStart_toEndOf="@+id/radioButton" />
                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/xlMargin"
            android:layout_marginBottom="@dimen/xlMargin"
            android:background="@drawable/button_next_background"
            android:text="@string/nextStepPersian"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/xxlTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>