<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/lMargin"
                android:text="@string/persian_location_on_map"
                android:textSize="@dimen/xxlTextSize" />
        </RelativeLayout>

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toBottomOf="@+id/actionBar"
            tools:context=".presentation.features.map.MapsFragment" />

        <ImageView
            android:id="@+id/iconLocation"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/iconslocation"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintHorizontal_bias="0.5"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/acceptLocationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/xlMargin"
            android:background="@drawable/button_next_background"
            android:text="@string/accept_location_persian"
            android:textSize="@dimen/xxlTextSize"
            map:layout_constraintBottom_toBottomOf="@+id/map"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/showAddressesList"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/xlMargin"
            android:textSize="@dimen/xlTextSize"
            android:background="#4444"
            android:textColor="@color/white"
            android:padding="@dimen/lPadding"
            android:textAlignment="center"
            android:text="@string/persian_choose_your_location"
            map:layout_constraintEnd_toEndOf="@+id/map"
            map:layout_constraintStart_toStartOf="@+id/map"
            map:layout_constraintTop_toTopOf="@+id/map" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent"
            map:layout_constraintVertical_bias="0.43" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
